# ELECTRA-lightning

./: .gitgnore  .gitignore  LICENSE  README.md  prepare_data.py  pretrain.py  pyproject.toml  run_hydra.py
conf/: config.yaml
conf/architecture/: base.yaml  medium.yaml  mini.yaml  small.yaml  tiny.yaml
conf/datamodule/: debug.yaml  openwebtext.yaml
conf/trainer/: baseline.yaml  debug.yaml  test.yaml
conf/training/: default.yaml
electra/: __init__.py  lit_datamodule.py  lit_module.py
electra/custom_models/modeling/: discriminator.py
electra/dataset/: __init__.py  mlm_dataset.py
electra/dataset_readers/: __init__.py  _lm_dataset_reader.py  openwebtext.py  wikitext.py
electra/models/: __init__.py  configuration_custom_electra.py  electra_module.py  transformers_module.py
electra/models/modeling/: discriminator.py  generator.py
electra/utils/: __init__.py  data_utils.py  hydra.py  masking_strategies.py
